maven-compiler-plugin setup for working with lombok and java 11