@@ -66,8 +66,8 @@
         <!--
             https://projectlombok.org/download-edge
         -->
-        <!--<lombok.version>edge-SNAPSHOT</lombok.version>-->
-        <lombok.version>1.18.4</lombok.version>
+        <lombok.version>edge-SNAPSHOT</lombok.version>
+        <!--<lombok.version>1.18.4</lombok.version>-->
         <lombok-maven-plugin.version>1.18.4.0</lombok-maven-plugin.version>
 
         <junit.version>4.12</junit.version>
@@ -813,26 +813,50 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven-compiler-plugin.version}</version>
                     <configuration>
-                        <!--
-                            https://maven.apache.org/plugins/maven-compiler-plugin/examples/pass-compiler-arguments.html
-
-                            https://docs.oracle.com/javase/tutorial/reflect/member/methodparameterreflection.html
-                            To store formal parameter names in a particular .class file, and thus enable the Reflection API to retrieve formal parameter names, compile the source file with the -parameters option to the javac compiler.
-                        -->
                         <fork>true</fork>
                         <compilerArgs>
+                            <!--
+                                https://maven.apache.org/plugins/maven-compiler-plugin/examples/pass-compiler-arguments.html
+
+                                https://docs.oracle.com/javase/tutorial/reflect/member/methodparameterreflection.html
+                                To store formal parameter names in a particular .class file, and thus enable the Reflection API to retrieve formal parameter names, compile the source file with the -parameters option to the javac compiler.
+                            -->
                             <arg>-parameters</arg>
-                            <!--<arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>-->
-                            <!--<arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>-->
-                            <!--<arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>-->
-                            <!--<arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>-->
-                            <!--<arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>-->
-                            <!--<arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>-->
-                            <!--<arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>-->
-                            <!--<arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>-->
-                            <!--<arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>-->
+                            <!--
+                                https://docs.oracle.com/javase/7/docs/technotes/tools/windows/javac.html
+                                -J option
+                                    Pass option to the java launcher called by javac
+                            -->
                             <arg>-J--illegal-access=warn</arg>
+                            <!--
+                                https://github.com/rzwitserloot/lombok/issues/985
+                                
+                                Lombok uses non-exposed APIs. We need to instruct the jvm that that's okay.
+                            -->
+                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                            <arg>-sourcepath</arg>
+                            <arg>
+                                ${project.basedir}/src/main/java${path.separator}${project.basedir}/target/generated-sources/annotations${path.separator}/
+                            </arg>
                         </compilerArgs>
+                        <!--
+                            https://github.com/rzwitserloot/lombok/issues/1723
+                        -->
+                        <annotationProcessorPaths>
+                            <path>
+                                <groupId>org.projectlombok</groupId>
+                                <artifactId>lombok</artifactId>
+                                <version>${lombok.version}</version>
+                            </path>
+                        </annotationProcessorPaths>
                     </configuration>
                 </plugin>
 
